# new-graph-measures

./: .gitignore  .pylintrc  CITATION.cff  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
GraphMeasures/: graph_measure_types.py
GraphMeasures/additional_features/: motif_probability.py
GraphMeasures/exceptions/: exception_codes.py  graph_measures_exception.py
GraphMeasures/feature_calculators/: decorators.py  feature_calculator.py  feature_calculators.py
GraphMeasures/feature_manager/: __init__.py  constants.py  feature_manager.py
GraphMeasures/feature_runner/: features_for_any_graph.py
GraphMeasures/feature_runners/: additional_features_runner.py  feature_calculator_runner.py
GraphMeasures/graph_features_metadata/: __init__.py  accelerated_features_metadata.py  base_features_metadata.py  feature_meta.py  features_metadata.py
GraphMeasures/loggers/: __init__.py  base_logger.py  empty_logger.py  file_logger.py  multi_logger.py
GraphMeasures/tests/: feature_tests.py
build_accelerated_features/: config.json  run_make_file_accelerated.py
build_scripts/: config.json  run_make_file_accelerated.py
graphMeasures/: __init__.py
graphMeasures/additional_features/: additional_features.py
graphMeasures/configuration/: config.json  configuration_keys.py
graphMeasures/examples/: example_2.txt  example_colors.json  example_colors_2.json  example_graph.txt
graphMeasures/exceptions/: exception_codes.py
local_tests/: generate_graphs.py  temp.py  test.py  test_on_s's.py  test_on_s.py  test_on_s_graph_density.py  test_on_s_old.py
(+12129 files in other folders)
