[metadata]
name = graph-measures
version = 0.1.57
license = GPL
maintainer = Ziv Naim
author = Itay Levinas, Roy Sh
maintainer_email = zivnaim3@gmail.com
url = https://github.com/louzounlab/graph-measures
description = A python package for calculating topological graph features on cpu/gpu
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gpu graph topological-features-calculator
description_file = README.md
license_files = LICENSE.rst

[options]
packages = find:
install_requires =
    setuptools==61.3.1
python_requires = >=3.6.8
include_package_data = 1

[bdist_wheel]
universal = 1
